fix figure right bleed inside .instructions

--- a/labs/template/basic.scss
+++ b/labs/template/basic.scss
@@ -423,6 +423,9 @@ figure {
 		}
 	}
 }
+.instructions figure {
+	margin-right: 0;
+}
 
 //~~~~~~~~~~~~~~~~
 //  code samples
